# my-wgsl

./: Cargo.toml  README.md
.github/workflows/: check.yml  safety.yml  test.yml
crates/my-wgsl/: Cargo.toml  README.md
crates/my-wgsl-macros/: Cargo.toml
crates/my-wgsl-macros/src/: lib.rs
crates/my-wgsl-syn/: Cargo.toml
crates/my-wgsl-syn/src/: attr.rs  compatible.rs  data.rs  expr.rs  externs.rs  file.rs  item.rs  lib.rs  path.rs  traits.rs  util.rs
crates/my-wgsl/examples/: var.rs
crates/my-wgsl/src/: attr.rs  function.rs  lib.rs  module.rs  structs.rs  to_code.rs  util.rs  var.rs
crates/my-wgsl/tests/: test.rs
crates/wgsl-builtin/: Cargo.toml
crates/wgsl-builtin/src/: functions.rs  helper.rs  lib.rs  types.rs
