[package]
name = "my-wgsl-home"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["rlib"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
syn = { version = "2.0.108", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.103" }
quote = { version = "1.0.41" }
const_format = { version = "0.2.35" }
const_panic = { version = "0.2.15" }
const-str = { version = "0.7.0" }
paste = { version = "1.0.15" }
