[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
my-wgsl-macros = { version = "0.1.5", path = "crates/my-wgsl-macros" }
my-wgsl-syn = { version = "0.1.1", path = "crates/my-wgsl-syn" }
wgsl-builtin = { version = "0.1.2", path = "crates/wgsl-builtin" }
syn-locator = "0.1.6"
syn = "2.0.106"
proc-macro2 = "1.0.91"
quote = "1.0.35"
const_format = "0.2.35"
const_panic = "0.2.15"
const-str = "0.5.7"
paste = "1.0.15"
memoffset = "0.9.1"
aligned-vec = "0.6.4"
