[package]
name = "my-wgsl-macros"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "A procedural macro for my-wgsl"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
proc-macro = true
doctest = false

[dependencies]
my-wgsl-syn = { version = "0.1.0", path = "../my-wgsl-syn" }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
