[package]
name = "my-wgsl-macros"
version = "0.1.5"
edition = "2021"
rust-version = "1.71.1"
description = "A procedural macro for my-wgsl"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
proc-macro = true
doctest = false

[dependencies]
my-wgsl-syn = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
