[package]
name = "my-wgsl-syn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A crate for my-wgsl"
documentation = "https://docs.rs/my-wgsl"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["rlib"]

[dependencies]
wgsl-builtin = { version = "0.1.1", path = "../wgsl-builtin" }
syn-locator = { version = "0.1.3", features = ["find"]}
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
const_format = { workspace = true }
const_panic = { workspace = true }
