[package]
name = "my-wgsl-syn"
version = "0.1.1"
edition = "2021"
rust-version = "1.71.1"
description = "A crate for my-wgsl"
documentation = "https://docs.rs/my-wgsl"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["rlib"]

[dependencies]
wgsl-builtin = { workspace = true }
syn-locator = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
const_format = { workspace = true }
const_panic = { workspace = true }
memoffset = { workspace = true }
aligned-vec = { workspace = true }
