[package]
name = "my-wgsl"
version = "0.1.5"
edition = "2021"
rust-version = "1.71.1"
description = "A WGSL compatibility check library"
documentation = "https://docs.rs/my-wgsl"
readme = "README.md" 
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["rlib"]

[dependencies]
my-wgsl-macros = { workspace = true }
my-wgsl-syn = { workspace = true }
wgsl-builtin = { workspace = true }
const_format = { workspace = true }
const-str = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
wgpu = { version = "26.0.1", default-features = false, features = ["dx12", "metal", "vulkan", "wgsl"] }
futures-lite = "2.6.1"

[[example]]
name = "var"
path = "examples/var.rs"
crate-type = ["bin"]
