[package]
name = "wgsl-builtin"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "WGSL builtin types"
repository = "https://github.com/ecoricemon/my-wgsl"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["rlib"]

[dependencies]
paste = { workspace = true }
